{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 355,
  "lineage": "320769a3-ec3f-79db-d672-08096869d60e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/loadBalancingRules/pmu-lb-rule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/publicIPAddresses/pmu-public-ip"
              }
            ],
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb",
            "location": "westeurope",
            "name": "pmu-lb",
            "resource_group_name": "pmu-rg",
            "sku": "Basic",
            "tags": {
              "project": "udacity-exam-1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1/ipConfigurations/internal_config",
              "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0/ipConfigurations/internal_config"
            ],
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/loadBalancingRules/pmu-lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb",
            "name": "BackEndAddressPool",
            "resource_group_name": "pmu-rg"
          },
          "dependencies": [
            "azurerm_lb.udacity",
            "azurerm_public_ip.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/probes/pmu-lb-probe",
            "interval_in_seconds": 60,
            "load_balancer_rules": [
              "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/loadBalancingRules/pmu-lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb",
            "name": "pmu-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "pmu-rg"
          },
          "dependencies": [
            "azurerm_lb.udacity",
            "azurerm_public_ip.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/backendAddressPools/BackEndAddressPool",
            "backend_port": 81,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/loadBalancingRules/pmu-lb-rule",
            "idle_timeout_in_minutes": 15,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb",
            "name": "pmu-lb-rule",
            "probe_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/probes/pmu-lb-probe",
            "protocol": "Tcp",
            "resource_group_name": "pmu-rg"
          },
          "dependencies": [
            "azurerm_lb.udacity",
            "azurerm_lb_backend_address_pool.udacity",
            "azurerm_lb_probe.udacity",
            "azurerm_public_ip.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "udacity-vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0",
            "internal_domain_name_suffix": "0rlbu40soiiedgu4gynjucxvmh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_config",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-81-6B",
            "name": "udacity-vm-nic-0",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "pmu-rg",
            "tags": {
              "project": "udacity-exam-1"
            },
            "virtual_machine_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Compute/virtualMachines/vm-udacity-0"
          },
          "dependencies": [
            "azurerm_resource_group.udacity",
            "azurerm_subnet.internal-net",
            "azurerm_virtual_network.udacity"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1",
            "internal_domain_name_suffix": "0rlbu40soiiedgu4gynjucxvmh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_config",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2B-88-69",
            "name": "udacity-vm-nic-1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "pmu-rg",
            "tags": {
              "project": "udacity-exam-1"
            },
            "virtual_machine_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Compute/virtualMachines/vm-udacity-1"
          },
          "dependencies": [
            "azurerm_resource_group.udacity",
            "azurerm_subnet.internal-net",
            "azurerm_virtual_network.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0/ipConfigurations/internal_config|/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "internal_config",
            "network_interface_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-0"
          },
          "dependencies": [
            "azurerm_lb.udacity",
            "azurerm_lb_backend_address_pool.udacity",
            "azurerm_network_interface.udacity-vm-nic",
            "azurerm_public_ip.udacity",
            "azurerm_resource_group.udacity",
            "azurerm_subnet.internal-net",
            "azurerm_virtual_network.udacity"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1/ipConfigurations/internal_config|/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/loadBalancers/pmu-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "internal_config",
            "network_interface_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkInterfaces/udacity-vm-nic-1"
          },
          "dependencies": [
            "azurerm_lb.udacity",
            "azurerm_lb_backend_address_pool.udacity",
            "azurerm_network_interface.udacity-vm-nic",
            "azurerm_public_ip.udacity",
            "azurerm_resource_group.udacity",
            "azurerm_subnet.internal-net",
            "azurerm_virtual_network.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkSecurityGroups/pmu-network-config",
            "location": "westeurope",
            "name": "pmu-network-config",
            "resource_group_name": "pmu-rg",
            "security_rule": [],
            "tags": {
              "project": "udacity-exam-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-in-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "81",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkSecurityGroups/pmu-network-config/securityRules/InboundHttp",
            "name": "InboundHttp",
            "network_security_group_name": "pmu-network-config",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "pmu-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-in-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkSecurityGroups/pmu-network-config/securityRules/InboundInternal",
            "name": "InboundInternal",
            "network_security_group_name": "pmu-network-config",
            "priority": 510,
            "protocol": "Tcp",
            "resource_group_name": "pmu-rg",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-out-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkSecurityGroups/pmu-network-config/securityRules/OutboundInternal",
            "name": "OutboundInternal",
            "network_security_group_name": "pmu-network-config",
            "priority": 520,
            "protocol": "Tcp",
            "resource_group_name": "pmu-rg",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.udacity",
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "pmu-udacity-test",
            "fqdn": "pmu-udacity-test.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/publicIPAddresses/pmu-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.178.37.15",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pmu-public-ip",
            "resource_group_name": "pmu-rg",
            "sku": "Basic",
            "tags": {
              "project": "udacity-exam-1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "pmu-rg",
            "virtual_network_name": "pmu-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.udacity",
            "azurerm_virtual_network.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet/subnets/internal",
            "network_security_group_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkSecurityGroups/pmu-network-config",
            "subnet_id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.udacity",
            "azurerm_resource_group.udacity",
            "azurerm_subnet.internal-net",
            "azurerm_virtual_network.udacity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "guid": "7b1a56d4-7252-4110-9a9e-361a9a0af567",
            "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet",
            "location": "westeurope",
            "name": "pmu-vnet",
            "resource_group_name": "pmu-rg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/virtualNetworks/pmu-vnet/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/0c34b9c6-2ea6-4fdf-9469-2300dc7a349b/resourceGroups/pmu-rg/providers/Microsoft.Network/networkSecurityGroups/pmu-network-config"
              }
            ],
            "tags": {
              "project": "udacity-exam-1"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.udacity"
          ]
        }
      ]
    }
  ]
}